--- a/4155 NormGraduates/views/indexAdmin.ejs
+++ b/4155 NormGraduates/views/indexAdmin.ejs
@@ -21,7 +21,7 @@
 
 	<script src="/javascript/buttonHandlersAndMore.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-	
+
 
 
 </head>
@@ -44,7 +44,7 @@
 
 
 	<% if(typeof majorsAndColors !== "undefined"){ %>
-		<table id="legend">
+		<table id="legend" style="margin-top: 90px;">
 				<tr>
 					<th>Color</th>
 					<th>Major</th>
@@ -77,7 +77,7 @@
 
 					</select>
 					<script>$('#major-select').dropdown();</script>
-                  </div>     
+                  </div>
         </form>
 
 
